--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,16 @@
-.App {
+.Template {
   text-align: center;
 }
 
-.App-logo {
+/* .Logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 4vmin;
   pointer-events: none;
-}
+} */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Header {
+  background-color: black;
+  min-height: 20vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,15 +19,66 @@
   color: white;
 }
 
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+
+}
+
+.body{
+display: flex;
+flex-direction: column;
+
+
+
+}
+
+input{
+  width: 750px;
+  height: 150px;
+}
+
+button{
+  width: 100px;
+  height: 40px;
+  border-radius: 4px;
+  transition: all 0.5s;
+  color: white;
+  background-color: green;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+.body{
+  background-color: whitesmoke;
+  min-height: 50vh;
+  display: flex;
+  flex-direction: center;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: purple;
+}
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
